# refact

./: AGENTS.md  CHANGES.md  README.md  test_trait
.github/workflows/: agent_engine_build.yml  agent_engine_release.yml  agent_gui_build.yml
docs/: BROWSER_MODE.md  README.md
refact-agent/engine/: AGENTS.md  Cargo.toml  Cross.toml  README.md
refact-agent/engine/crates/refact-chat-history/: Cargo.toml
refact-agent/engine/crates/refact-chat-history/src/: compression_event_plan_tests.rs  history_limit.rs  retry_policy.rs  trajectory_ops.rs
refact-agent/engine/crates/refact-core/: Cargo.toml
refact-agent/engine/crates/refact-core/src/: chat_types.rs  lib.rs  llm_types.rs  model_caps.rs  models_dev.rs  provider_types.rs  vecdb_types.rs  worktree_meta.rs
refact-agent/engine/crates/refact-providers/: Cargo.toml
refact-agent/engine/crates/refact-providers/src/: anthropic.rs  claude_code.rs  claude_code_oauth.rs  config.rs  config_store.rs  custom.rs  deepseek.rs  doubao.rs  github_copilot.rs  google_gemini.rs  groq.rs  identity.rs  instance.rs  kimi.rs  lib.rs  lmstudio.rs  minimax.rs  models_dev_provider.rs  oauth_refresh.rs  ollama.rs  openai.rs  openai_codex.rs  openai_codex_oauth.rs  openai_responses.rs  openrouter.rs  qwen.rs  registry.rs  traits.rs  vllm.rs  xai.rs  xai_responses.rs  zhipu.rs
refact-agent/engine/crates/refact-runtime-api/: Cargo.toml
refact-agent/engine/crates/refact-runtime-api/src/: lib.rs
refact-agent/engine/crates/refact-worktrees/: Cargo.toml
refact-agent/engine/crates/refact-worktrees/src/: git.rs  scope.rs  service.rs  types.rs
refact-agent/engine/crates/refact-yaml-configs/: Cargo.toml
refact-agent/engine/crates/refact-yaml-configs/src/: customization_types.rs  lib.rs  project_configs_bootstrap.rs  project_information.rs
refact-agent/engine/crates/refact-yaml-configs/src/defaults/code_lens/: explain.yaml  open_chat.yaml  problems.yaml
refact-agent/engine/crates/refact-yaml-configs/src/defaults/modes/: agent.yaml  buddy.yaml  claude_opus47_agent.yaml  explore.yaml  gpt55_agent.yaml  learn.yaml  openai_agent.yaml  oss_agent.yaml  oss_weak_agent.yaml  past_work.yaml  plan.yaml  quick_agent.yaml  review.yaml  setup.yaml  setup_agents_md.yaml  setup_commands.yaml  setup_mcp.yaml  setup_skills.yaml  shell.yaml  task_agent.yaml  task_planner.yaml
refact-agent/engine/crates/refact-yaml-configs/src/defaults/subagents/: buddy_architecture_drift_watcher.yaml  buddy_behavior_learner.yaml  buddy_dependency_radar.yaml  buddy_docs_gardener.yaml  buddy_knowledge_conflict_resolver.yaml  buddy_memory_gardener.yaml  buddy_model_cost_optimizer.yaml  buddy_refactor_hunter.yaml  buddy_security_whisperer.yaml  buddy_setup_coach.yaml  buddy_skill_author.yaml  buddy_user_habit_coach.yaml  code_edit.yaml  code_review.yaml  code_review_gather_files.yaml  commit_message.yaml  compress_trajectory.yaml  example_custom_subagent.yaml.example  follow_up.yaml  http_subchat.yaml  http_subchat_single.yaml  kg_deprecate.yaml  memo_extraction.yaml  refact_compile_sniffer.yaml  refact_error_detective.yaml  refact_self_critic.yaml  strategic_planning.yaml  strategic_planning_gather_files.yaml  subagent.yaml  subagent_with_editing.yaml
refact-agent/engine/crates/refact-yaml-configs/src/defaults/toolbox_commands/: bugs.yaml  comment.yaml  explain.yaml  help.yaml  shorter.yaml  summarize.yaml  typehints.yaml  typos.yaml
(+1230 files in other folders)
