[package]
name = "refact-runtime-api"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-chat-api = { path = "../refact-chat-api" }
refact-tool-api = { path = "../refact-tool-api" }
refact-buddy-core = { path = "../refact-buddy-core" }
refact-chat-history = { path = "../refact-chat-history" }
async-trait = "0.1.73"
serde.workspace = true
